# infa2spark

./: .gitignore  README.md  Untitled.ipynb  XSD_COMPLIANCE_ANALYSIS.md  config_directory_consolidation_results.md  enterprise_naming_test_results.md  implementation_fixes_verification.md  implementation_roadmap.md  requirements.txt  run_poc.sh  run_tests.sh  sample_imx_project.xml  setup_test_environment.sh  test_workflow_tasks.py  verify_production_naming.py
reorganized_framework/: README.md  XSD_ALIGNMENT_ANALYSIS.md  fix_reorganization.py  generate_clean_app.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
reorganized_framework/examples/basic_example/: README.md  requirements.txt
reorganized_framework/examples/basic_example/config/: application.yaml
reorganized_framework/examples/basic_example/scripts/: run.sh
reorganized_framework/examples/enterprise_example/: README.md  test_requirements.txt
reorganized_framework/examples/enterprise_example/tests/: conftest.py
reorganized_framework/examples/enterprise_with_dynamic_tests/: README.md  run.sh  test_requirements.txt
reorganized_framework/examples/enterprise_with_dynamic_tests/tests/: conftest.py
reorganized_framework/src/informatica_spark/: __init__.py  cli.py
reorganized_framework/src/informatica_spark/core/: __init__.py
reorganized_framework/src/informatica_spark/runtime/: __init__.py  base_classes.py  config_externalization.py
reorganized_framework/tests/: test_framework_structure.md
reorganized_framework/tests/data/expected/: department_summary.parquet  enriched_customers.parquet
reorganized_framework/tests/data/fixtures/: test_config.yaml  (+2 more)
reorganized_framework/tests/e2e/: test_complete_pipeline.py
(+696 files in other folders)
